[package]
name = "riteraft"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/ritedb/riteraft"
description = "RiteRaft - A raft framework, for regular people"
keywords = ["raft", "distributed-systems", "ha"]

[dependencies]
async-trait = "0.1.48"
bincode = "1.3"
heed = "0.10.6"
heed-traits = "0.7"
log = { version = "0.4", features = ["std"] }
parking_lot = "0.11"
prost = "0.11"
raft = { git = "https://github.com/tikv/raft-rs.git", rev = "9d360a3b0cdb691da8e500a4f73c457b605a1d73", features = ["prost-codec"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
slog = "2"
thiserror = "1.0"
tokio = { version = "1.2", features = ["full"] }
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"

